# OpenGLES3DWaifu

./: .gitignore  CMakeLists.txt  OpenGLES3DWaifu.cpp  SkinnedFragShader.fsh  SkinnedVertShader.vsh
models/test1/: test1.fbx  test1.pod
